<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	>
		<TextView
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.25"
			android:text="@string/height_label_text"    
		/>    
		<EditText
		    android:id="@+id/height"
		    android:inputType="numberDecimal"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.75"
		    android:hint="@string/height_hint_text"
		/>
	</LinearLayout>    

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	>
		<TextView
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.25"
			android:text="@string/weight_label_text"    
		/>    
		<EditText
		    android:id="@+id/weight"
		    android:inputType="number"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.75"
		    android:hint="@string/weight_hint_text"
		/>
	</LinearLayout>    

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	>
		<View 
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.25"
		/>
		<Button 
			android:id="@+id/button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.75"
			android:text="@string/button_text"
		/>
	</LinearLayout>    
</LinearLayout>